# sbndcode

./: .gitignore  CMakeLists.txt
OpDetSim/: CMakeLists.txt  SimPMTSBND_module.cc  opdetsimmodule_sbnd.fcl
fcl/: CMakeLists.txt
fcl/deeplearn/: dlprod_fclbase_analyzers.fcl  dlprod_fclbase_driver.fcl  dlprod_fclbase_producers.fcl  dlprod_fclbase_services.fcl  dlprod_singlep_common.fcl  dlprod_singlep_muon_debug.fcl
fcl/detsim/: detsim_intime_sbnd.fcl
fcl/dl_gen/: prod_cosmics_larg4_detsim_sbnd.fcl  prod_genie_CC_cosmics_larg4_detsim_sbnd.fcl  prod_genie_CC_larg4_detsim_sbnd.fcl  prod_genie_NC_cosmics_larg4_detsim_sbnd.fcl  prod_genie_NC_larg4_detsim_sbnd.fcl  prod_nue_genie_CC_cosmics_larg4_detsim_sbnd.fcl  prod_nue_genie_CC_larg4_detsim_sbnd.fcl
fcl/g4/: g4_intime_3drift.fcl  g4_semi_analytic_light.fcl
fcl/reco/: reco_3drift_windows.fcl
lar1ndcode/: CMakeLists.txt  SamHist.root
lar1ndcode/AnalysisTree/: AnalysisTree_module.cc  CMakeLists.txt  LarAnalyzerEg_module.cc  SourceCalibAna_module.cc  analysistreemodule.fcl
lar1ndcode/Analyzer/: CMakeLists.txt  CMakeLists.txt~  SamuelAnalyzer.fcl  SamuelAnalyzer.fcl~  SamuelAnalyzer_module.cc  SamuelAnalyzer_module.cc~
lar1ndcode/Analyzer_v1/: CMakeLists.txt  SamuelAnalyzer_module.cc
lar1ndcode/Calibration/: CMakeLists.txt  CalWireT1053_module.cc
lar1ndcode/DetectorSim/: CMakeLists.txt  DoubleEndOpDetResponse.h  DoubleEndOpDetResponse_service.cc  SimWireT1053_module.cc  detsimmodules_lar1nd.fcl  opticaldetectorservices_sbnd.fcl
lar1ndcode/EventGenerator_OpLib/: CMakeLists.txt  LightSourceOpLib_module.cc  lightsource_oplib.fcl
lar1ndcode/Geo/: CMakeLists.txt  geometry_lar1nd.fcl
sbndcode/: CMakeLists.txt
sbndcode/DaqAnalysis/: Analysis.cc  Analysis.h  CMakeLists.txt  ChannelData.cc  ChannelData.hh  ChannelMap.hh  DaqDecoder.h  DaqDecoder_module.cc  FFT.cc  FFT.hh  HeaderData.hh  Mode.cc  Noise.cc  Noise.hh  PeakFinder.cc  PeakFinder.hh  README.md  Redis.cc  Redis.hh  RedisData.cc  RedisData.hh  SimpleDaqAnalysis_module.cc  VSTAnalysis_module.cc  classes.h  classes_def.xml  linkdef.h
sbndcode/DaqAnalysis/Decoder/: DaqDecoder.h  DaqDecoder_module.cc
sbndcode/DaqAnalysis/LariatDataProducts/: AGCounter.cxx  AGCounter.h  AuxDetParticleID.cxx  AuxDetParticleID.h  CMakeLists.txt  ConditionsSummary.cxx  Edge.cxx  Edge.h  MuonRangeStackHits.cxx  MuonRangeStackHits.h  TOF.cxx  WCTrack.h
sbndcode/DaqAnalysis/LariatGeo/: AuxDetChannelMapLArIATAlg.h  AuxDetGeoObjectSorterLArIAT.cxx  AuxDetGeoObjectSorterLArIAT.h  CMakeLists.txt  ChannelMapLArIATAlg.cxx  ChannelMapLArIATAlg.h  GeoObjectSorterLArIAT.cxx  LArIATAuxDetGeometryHelper.h  LArIATGeometryHelper.h  LArIATGeometryHelper_service.cc
sbndcode/DaqAnalysis/LariatGeo/gdml/: lariat.gdml  lariat_5mm_v0.gdml  lariat_geo.C  lariat_magnet.gdml  lariat_v1_0.gdml  lariat_v1_2.gdml  lariatoptical.gdml
sbndcode/DaqAnalysis/Redis/: OnlineAnalysis_module.cc  Redis.cc  RedisData.cc  RedisData.hh
sbndcode/DaqAnalysis/VSTCalibration/: CMakeLists.txt  CalWireVST_module.cc
sbndcode/DaqAnalysis/fcl/: analysis.fcl  decoder.fcl  pipeline.fcl  redis_lariat_analysis.fcl  redis_pipeline.fcl  simple_pipeline.fcl
sbndcode/MCTruthExtractor/: #CMakeLists.txt#  CMakeLists.txt  NuAna_module.cc  mc_info_extraction.fcl
sbndcode/MCTruthExtractor/alg/: NuAnaAlg.h
sbndcode/VSTAnalysis/: Analysis.cc  Analysis.hh  CMakeLists.txt  ChannelData.cc  ChannelData.hh  ChannelMap.hh  EventInfo.hh  FFT.cc  GoodHeader.hh  GoodHeader_service.cc  HeaderData.hh  Mode.cc  Mode.hh  NevisTPCMetaData.hh  Noise.cc  Noise.hh  PeakFinder.cc  PeakFinder.hh  Purity.cc  Purity.hh  README.md  RawHitFinderVST_module.cc  VSTAnalysis_module.cc  VSTChannelMap.hh  VSTChannelMap_service.cc  classes.h  classes_def.xml  hitfindermodulesVST.fcl  linkdef.h  problem_report
sbndcode/VSTAnalysis/Decoder/: CMakeLists.txt  DaqDecoder.h  DaqDecoder_module.cc  DumpTimestamp_module.cc
sbndcode/VSTAnalysis/LariatDataProducts/: ConditionsSummary.h  TOF.h  WCTrack.cxx  classes.h  classes_def.xml
sbndcode/VSTAnalysis/LariatGeo/: AuxDetChannelMapLArIATAlg.cxx  AuxDetChannelMapLArIATAlg.h  AuxDetGeoObjectSorterLArIAT.cxx  AuxDetGeoObjectSorterLArIAT.h  CMakeLists.txt  ChannelMapLArIATAlg.cxx  ChannelMapLArIATAlg.h  GeoObjectSorterLArIAT.cxx  GeoObjectSorterLArIAT.h  LArIATAuxDetGeometryHelper_service.cc  LArIATGeometryHelper_service.cc  auxdetgeometry.fcl  channelstatus_lariat.fcl  geometry_lariat.fcl
sbndcode/VSTAnalysis/LariatGeo/gdml/: CMakeLists.txt  lariat_3mm.gdml  lariat_5mm.gdml  lariat_v1_1.gdml
sbndcode/VSTAnalysis/OnlineFilters/: SnapshotFilter_module.cc
sbndcode/VSTAnalysis/Redis/: CMakeLists.txt  OnlineAnalysis_module.cc  Redis.cc  Redis.hh  RedisData.cc  RedisData.hh
sbndcode/VSTAnalysis/VSTCalibration/: CMakeLists.txt
sbndcode/VSTAnalysis/VSTGeo/: channelMap_output_NevisTPCCALIB_generator_LArIAT_Pin_Mapping_06212018_v2.txt
sbndcode/VSTAnalysis/fcl/: CMakeLists.txt  Domspipeline.fcl  analysis.fcl  daq_interface_online_monitoring.fcl  pipeline.fcl  pipeline_RawHit.fcl  redis_lariat_analysis.fcl  redis_lariat_analysis_RawHit.fcl  redis_pipeline.fcl  redis_pipeline_RawHit.fcl  simple_pipeline.fcl  vst_channel_map.fcl
sbndcode/VSTAnalysis/fcl/DAQ/: daq_interface_1fem_test.fcl  daq_interface_offline_monitoring.fcl  daq_interface_offline_monitoring_Purity.fcl  daq_interface_offline_snapshots.fcl  daq_interface_online_monitoring.fcl  daq_interface_online_monitoring_RawHit.fcl  daq_interface_online_monitoring_snapshots.fcl  daq_interface_online_monitoring_with_raw_hit.fcl  digits.fcl  digits_with_timestamp.fcl
sbndcode/VSTAnalysis/fcl/analysis_example/: VSTanalysis.fcl  analysis.fcl
sbndcode/VSTAnalysis/fcl/dump_timestamps/: dump_timestamps.fcl
sbndcode/VSTAnalysis/fcl/pipeline_example/: decoder.fcl  driver_pipeline.fcl  pipeline.fcl  pipeline_RawHit.fcl  simple_pipeline.fcl  simple_pipeline_RawHit.fcl
sbndcode/VSTAnalysis/fcl/redis_example/: redis_lariat_analysis.fcl  redis_lariat_analysis_Purity.fcl  redis_lariat_analysis_RawHit.fcl  redis_pipeline.fcl  redis_pipeline_RawHit.fcl
ups/: product_deps
(+721 files in other folders)
